burgers added with no img

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
             </button>
           </dialog>
         </div>
-        <h2 class="menuTitle menuTitle2">Hamburguesas</h2>
+        <h2 class="menuTitle">Hamburguesas</h2>
         <div class="burgersContainer">
           <div
             class="atropos myAtropos3"
-            onclick="document.getElementById('BBQ').showModal();"
+            onclick="document.getElementById('bbq').showModal();"
           >
             <div class="atropos-scale">
               <div class="atropos-rotate">
@@ -179,7 +179,7 @@
               </div>
             </div>
           </div>
-          <dialog id="BBQ" class="dialogDescription">
+          <dialog id="bbq" class="dialogDescription">
             <h4 class="brand">BBQ Supremo</h4>
             <div class="dialogContent">
               <img
@@ -200,14 +200,14 @@
             </div>
             <button
               class="button"
-              onclick="document.getElementById('BBQ').close();"
+              onclick="document.getElementById('bbq').close();"
             >
               Volver
             </button>
           </dialog>
           <div
             class="atropos myAtropos4"
-            onclick="document.getElementById('Mediterranean').showModal();"
+            onclick="document.getElementById('mediterranean').showModal();"
           >
             <div class="atropos-scale">
               <div class="atropos-rotate">
@@ -223,7 +223,7 @@
               </div>
             </div>
           </div>
-          <dialog id="Mediterranean" class="dialogDescription">
+          <dialog id="mediterranean" class="dialogDescription">
             <h4 class="brand">Mediterránea</h4>
             <div class="dialogContent">
               <img
@@ -246,14 +246,14 @@
             </div>
             <button
               class="button"
-              onclick="document.getElementById('Mediterranean').close();"
+              onclick="document.getElementById('mediterranean').close();"
             >
               Volver
             </button>
           </dialog>
           <div
             class="atropos myAtropos5"
-            onclick="document.getElementById('Mexican').showModal();"
+            onclick="document.getElementById('mexican').showModal();"
           >
             <div class="atropos-scale">
               <div class="atropos-rotate">
@@ -266,7 +266,7 @@
               </div>
             </div>
           </div>
-          <dialog id="Mexican" class="dialogDescription">
+          <dialog id="mexican" class="dialogDescription">
             <h4 class="brand">Mexicana</h4>
             <div class="dialogContent">
               <img
@@ -292,7 +292,7 @@
             </div>
             <button
               class="button"
-              onclick="document.getElementById('Mexican').close();"
+              onclick="document.getElementById('mexican').close();"
             >
               Volver
             </button>
@@ -346,9 +346,153 @@
               Volver
             </button>
           </dialog>
+          <div
+            class="atropos myAtropos7"
+            onclick="document.getElementById('veggie').showModal();"
+          >
+            <div class="atropos-scale">
+              <div class="atropos-rotate">
+                <div class="atropos-inner">
+                  <h3 class="burgerTitle">Vegetariana</h3>
+                  <div class="card-burger">
+                    <img
+                      class="burgerBackground"
+                      src="./img/Extreme Spicy.jpeg"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <dialog id="veggie" class="dialogDescription">
+            <h4 class="brand">Vegetariana</h4>
+            <div class="dialogContent">
+              <img
+                src="./img/Extreme Spicy-noBackground.png"
+                class="dialogBurger"
+                alt="hamburguesa"
+              />
+              <p class="dialogText">
+                ¡Descubre la hamburguesa vegetariana que redefine el sabor
+                fresco y saludable!<br /><br />
+                Nuestra hamburguesa comienza con una jugosa base de vegetales,
+                acompañada de un cremoso aguacate que aporta un toque de
+                suavidad y riqueza.<br /><br />
+                El hummus, con su sabor a garbanzos ligeramente especiado,
+                ofrece una capa de cremosidad deliciosa y llena de proteína. Las
+                espinacas frescas añaden un crujido saludable y un toque de
+                verdor vibrante, mientras que el tomate jugoso aporta una
+                explosión de frescura en cada mordida.<br /><br />
+                ¡Ven a disfrutar de esta hamburguesa vegetariana, donde el sabor
+                y la salud se encuentran en cada bocado!
+              </p>
+            </div>
+            <button
+              class="button"
+              onclick="document.getElementById('veggie').close();"
+            >
+              Volver
+            </button>
+          </dialog>
+          <div
+            class="atropos myAtropos8"
+            onclick="document.getElementById('tropical').showModal();"
+          >
+            <div class="atropos-scale">
+              <div class="atropos-rotate">
+                <div class="atropos-inner">
+                  <h3 class="burgerTitle">Tropical</h3>
+                  <div class="card-burger">
+                    <img
+                      class="burgerBackground"
+                      src="./img/Extreme Spicy.jpeg"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <dialog id="tropical" class="dialogDescription">
+            <h4 class="brand">Tropical</h4>
+            <div class="dialogContent">
+              <img
+                src="./img/Extreme Spicy-noBackground.png"
+                class="dialogBurger"
+                alt="hamburguesa"
+              />
+              <p class="dialogText">
+                ¡Descubre la combinación perfecta entre lo dulce y lo salado con
+                nuestra Hamburguesa Tropical!<br /><br />
+                Envolvemos una jugosa hamburguesa de res en una suculenta piña a
+                la parrilla que aporta un toque de dulzura caramelizada.
+                Añadimos una generosa capa de jamón ahumado, fundido con queso
+                suizo, creando una mezcla irresistible de sabores.<br /><br />
+                Todo esto se adereza con nuestra exquisita salsa teriyaki, que
+                equilibra la hamburguesa con su sabor umami profundo y sabroso.
+                Servida en un pan suave y recién horneado, esta hamburguesa es
+                un festín de sabores que te transportará a un paraíso tropical
+                en cada bocado.<br /><br />
+                ¡Atrévete a probarla y deja que tu paladar viva una experiencia
+                única e inolvidable!
+              </p>
+            </div>
+            <button
+              class="button"
+              onclick="document.getElementById('tropical').close();"
+            >
+              Volver
+            </button>
+          </dialog>
+          <div
+            class="atropos myAtropos9"
+            onclick="document.getElementById('truffled').showModal();"
+          >
+            <div class="atropos-scale">
+              <div class="atropos-rotate">
+                <div class="atropos-inner">
+                  <h3 class="burgerTitle">Trufada</h3>
+                  <div class="card-burger">
+                    <img
+                      class="burgerBackground"
+                      src="./img/Extreme Spicy.jpeg"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <dialog id="truffled" class="dialogDescription">
+            <h4 class="brand">Trufada</h4>
+            <div class="dialogContent">
+              <img
+                src="./img/Extreme Spicy-noBackground.png"
+                class="dialogBurger"
+                alt="hamburguesa"
+              />
+              <p class="dialogText">
+                ¡Descubre nuestra Hamburguesa Gourmet, una experiencia culinaria
+                que combina elegancia y sabor en cada bocado!<br /><br />
+                Imagina una suculenta hamburguesa de res, coronada con un queso
+                trufado que derrite su aroma delicado y su sabor sofisticado
+                sobre la carne. Los champiñones salteados, tiernos y sabrosos,
+                aportan una textura rica.<br /><br />La cebolla caramelizada,
+                con su dulzura profunda y su textura suave, completa esta obra
+                maestra con un contraste perfecto. Todo esto se ensambla en un
+                pan artesanal recién horneado que realza cada ingrediente.<br /><br />
+                ¡Ven y disfruta de un festín que redefine lo que una hamburguesa
+                puede ser!
+              </p>
+            </div>
+            <button
+              class="button"
+              onclick="document.getElementById('truffled').close();"
+            >
+              Volver
+            </button>
+          </dialog>
         </div>
       </div>
-      <div class="textBackground textBackground2">
+      <div class="textBackground">
         <div class="textRow">
           <span class="word"></span>
         </div>
@@ -405,6 +549,9 @@
         Atropos({ ...config2, el: ".myAtropos4" });
         Atropos({ ...config2, el: ".myAtropos5" });
         Atropos({ ...config2, el: ".myAtropos6" });
+        Atropos({ ...config2, el: ".myAtropos7" });
+        Atropos({ ...config2, el: ".myAtropos8" });
+        Atropos({ ...config2, el: ".myAtropos9" });
       };
       setAtropos();
       swup.hooks.on("page:view", (visit) => {
