last burgers images added

--- a/index.html
+++ b/index.html
@@ -405,10 +405,7 @@
                 <div class="atropos-inner">
                   <h3 class="burgerTitle">Vegetariana</h3>
                   <div class="card-burger">
-                    <img
-                      class="burgerBackground"
-                      src="./img/Extreme Spicy.jpeg"
-                    />
+                    <img class="burgerBackground" src="./img/Vegetarian.jpeg" />
                   </div>
                 </div>
               </div>
@@ -426,7 +423,7 @@
             </div>
             <div class="dialogContent">
               <img
-                src="./img/Extreme Spicy-noBackground.png"
+                src="./img/Vegetarian-noBackground.png"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -455,10 +452,7 @@
                 <div class="atropos-inner">
                   <h3 class="burgerTitle">Tropical</h3>
                   <div class="card-burger">
-                    <img
-                      class="burgerBackground"
-                      src="./img/Extreme Spicy.jpeg"
-                    />
+                    <img class="burgerBackground" src="./img/Tropical.jpeg" />
                   </div>
                 </div>
               </div>
@@ -476,7 +470,7 @@
             </div>
             <div class="dialogContent">
               <img
-                src="./img/Extreme Spicy-noBackground.png"
+                src="./img/Tropical-noBackground.png"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
