much better css

--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@
     </nav>
     <main id="swup">
       <div class="about">
-        <h2 class="aboutTitle">Walter Burgers</h2>
-        <p class="aboutText">
+        <h2 class="aboutTitle">Sobre Nosotros</h2>
+        <p>
           Walter Burgers no es una verdadera hamburguesería, sino un modelo
           creado para mostrar nuestra habilidad en diseño web. En este espacio,
           hemos puesto en práctica nuestra pasión por el diseño y la
