social media meta tags added

--- a/about.html
+++ b/about.html
@@ -9,10 +9,37 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="apple-touch-icon" href="./logo.svg" />
     <link rel="stylesheet" href="./index.css" />
-    <title>Diseño Web Profesional y Personalizado | W Diseño Web</title>
+    <title>Sobre Nosotros</title>
     <meta
       name="description"
-      content="Desarrollamos sitios web atractivos y funcionales, adaptados a tus necesidades. ¡Haz que tu presencia online destaque!"
+      content="Descubre el paraíso de las hamburguesas en Walter Burgers. Ofrecemos una variedad de hamburguesas gourmet, hechas con ingredientes frescos y de alta calidad."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://walterburgers.xn--wdiseoweb-p6a.com/"
+    />
+    <meta property="og:title" content="Walter Burgers" />
+    <meta
+      property="og:description"
+      content="Descubre el paraíso de las hamburguesas en Walter Burgers. Ofrecemos una variedad de hamburguesas gourmet, hechas con ingredientes frescos y de alta calidad."
+    />
+    <meta
+      property="og:image"
+      content="https://walterburgers.xn--wdiseoweb-p6a.com/img/walter burgers.webp"
+    />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://xn--wdiseoweb-p6a.com/" />
+    <meta name="twitter:title" content="Walter Burgers" />
+    <meta
+      name="twitter:description"
+      content="Descubre el paraíso de las hamburguesas en Walter Burgers. Ofrecemos una variedad de hamburguesas gourmet, hechas con ingredientes frescos y de alta calidad."
+    />
+    <meta
+      name="twitter:image"
+      content="https://walterburgers.xn--wdiseoweb-p6a.com/img/walter burgers.webp"
     />
   </head>
   <body>
