--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Lautaro Waltersdorf" />
     <link rel="manifest" href="./manifest.json" />
-    <link rel="apple-touch-icon" href="./logo.svg" />
+    <link rel="apple-touch-icon" href="./img/logo.svg" />
+    <link rel="icon" type="image/x-icon" href="./img/logo.svg" />
     <link rel="stylesheet" href="./index.css" />
     <title>Walter Burgers</title>
     <meta
@@ -31,7 +32,10 @@
     />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://xn--wdiseoweb-p6a.com/" />
+    <meta
+      name="twitter:url"
+      content="https://walterburgers.xn--wdiseoweb-p6a.com/"
+    />
     <meta name="twitter:title" content="Walter Burgers" />
     <meta
       name="twitter:description"
